# Source-code

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  Makefile.in  Mining & Syncing nodes  README.md  aclocal.m4  build instructions ubuntu.txt  configure.ac  index.html  libbitcoinrentconsensus.pc.in  package.json
autom4te.cache/: output.0  requests  traces.0  traces.1
contrib/: README.md  bitcoinrent-cli.bash-completion  bitcoinrent-qt.pro  bitcoinrent-tx.bash-completion  bitcoinrentd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
doc/: Doxyfile.in  README.md  (+29 more)
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  README.md  addrdb.h  addrman.h  amount.h  arith_uint256.h  base58.h  bech32.h  bitcoinrent-cli-res.rc  bitcoinrent-cli.cpp  bitcoinrent-tx-res.rc  bitcoinrent-tx.cpp  bitcoinrentd-res.rc  bitcoinrentd.cpp  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  fs.h  (+69 more)
src/bench/: bench.h  bench_bitcoinrent.cpp  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: bitcoinrent-config.h.in~
src/consensus/: consensus.cpp  consensus.h  merkle.h  params.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/index/: base.h  txindex.h
src/interfaces/: README.md  handler.h  node.cpp  node.h  wallet.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinrent.cpp  bitcoinrent.qrc  bitcoinrent_locale.qrc  bitcoinrentaddressvalidator.cpp  bitcoinrentaddressvalidator.h  bitcoinrentamountfield.cpp  bitcoinrentamountfield.h  bitcoinrentgui.cpp  bitcoinrentgui.h  bitcoinrentstrings.cpp  bitcoinrentunits.cpp  bitcoinrentunits.h  callback.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  (+54 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/icons/: bitcoinrent.icns
src/qt/locale/: bitcoinrent_af.ts  bitcoinrent_af_ZA.ts  bitcoinrent_ar.ts  bitcoinrent_be_BY.ts  bitcoinrent_bg.ts  bitcoinrent_bg_BG.ts  bitcoinrent_ca.ts  bitcoinrent_ca@valencia.ts  bitcoinrent_ca_ES.ts  bitcoinrent_cs.ts  bitcoinrent_cy.ts  bitcoinrent_da.ts  bitcoinrent_de.ts  bitcoinrent_el.ts  bitcoinrent_el_GR.ts  bitcoinrent_en.ts  bitcoinrent_en_GB.ts  bitcoinrent_eo.ts  bitcoinrent_es.ts  bitcoinrent_es_AR.ts  bitcoinrent_es_CL.ts  bitcoinrent_es_CO.ts  bitcoinrent_es_DO.ts  bitcoinrent_es_ES.ts  bitcoinrent_es_MX.ts  bitcoinrent_es_UY.ts  bitcoinrent_es_VE.ts  bitcoinrent_et.ts  bitcoinrent_et_EE.ts  bitcoinrent_eu_ES.ts  bitcoinrent_fa.ts  bitcoinrent_fa_IR.ts  bitcoinrent_fi.ts  bitcoinrent_fr.ts  bitcoinrent_fr_CA.ts  bitcoinrent_fr_FR.ts  bitcoinrent_gl.ts  bitcoinrent_he.ts  bitcoinrent_hi_IN.ts  bitcoinrent_hr.ts  (+46 more)
src/qt/res/res/: bitcoinrent-qt-res.rc
src/qt/test/: Makefile  addressbooktests.cpp  addressbooktests.h  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.h
src/script/: bitcoinrentconsensus.cpp  bitcoinrentconsensus.h  descriptor.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/secp256k1/autom4te.cache/: requests
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+30 more)
src/test/data/: README.md  tx_valid.json
src/univalue/autom4te.cache/: requests
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h  univalue_get.cpp
src/wallet/: coincontrol.h  coinselection.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h  walletutil.h
src/wallet/test/: coinselector_tests.cpp  psbt_wallet_tests.cpp  wallet_crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h
(+251 files in other folders)
